# toosh

./: .gitignore  .prettierrc  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: wsgi.py
src/tailwind/: styles.css
src/toosh_co_il/: __init__.py  __main__.py
src/toosh_co_il/static/: index.js
src/toosh_co_il/static/9squares/: info.json
src/toosh_co_il/static/javascript/: animations.js  nav-links-colors.js
src/toosh_co_il/static/projects/alefbeitgimel/: metadata.json
src/toosh_co_il/static/projects/golden-margarita/: metadata.json
src/toosh_co_il/static/projects/golden-margarita-bw/: metadata.json
src/toosh_co_il/static/projects/good-morning/: metadata.json
src/toosh_co_il/static/projects/goodgood/: metadata.json
src/toosh_co_il/static/projects/hibbuk1/: metadata.json
src/toosh_co_il/templates/: base.html  base.html.j2  gallery.html  image-focus-fragment.html.j2  image-focus.html.j2  image-modal-fragment.html.j2  index-projects.html.j2  index.html  index.html.j2  item-focus.html  item-focus.html.j2  main-window.html  modal-fragment.html.j2  modal-test.html.j2  projects.html.j2  test-fragment.html.j2  test-loader.html.j2  test.html  test.html.j2  transition-test.html.j2
src/toosh_co_il/templates/main/: base.html.j2  designs.html.j2  index.html.j2  projects.html.j2
src/toosh_co_il/templates/older_design/: base.html.j2  image-focus.html.j2  index.html.j2  projects.html.j2
src/toosh_co_il/templates/revamp/: base.html.j2  designs.html.j2  index.html.j2  projects.html.j2
(+18 files in other folders)
